--- a/oblig2Qunit.html
+++ b/oblig2Qunit.html
@@ -14,9 +14,9 @@
 
     <script>
         //model
-        let numbers = [7, 3, 1, 5, 8];
+        let numbers;
         let chosenBar;
-        let inputValue = 9;
+        let inputValue;
 
         show();
             function show() {}
@@ -24,38 +24,46 @@
 
         QUnit.test("select 1", function (assert) {
             select(1);
-            const actual = chosenBar 
-            const expected = 1; 
+            let actual = chosenBar; 
+            let expected = 1; 
             assert.equal(actual, expected);
         });
 
         QUnit.test("select 2", function (assert) {
+            select(1);
             select(2);
-            const actual = chosenBar 
-            const expected = 2; 
+            let actual = chosenBar 
+            let expected = 2; 
             assert.equal(actual, expected);
         });
 
         QUnit.test("slette en stolpe", function (assert) {
+            numbers = [3, 1, 2];
+            chosenBar = 2;
             removeSelectedBar()
-            const actual = numbers.length
-            const expected = 4
-            assert.equal(actual, expected);
+            let actual = numbers;
+            let expected = [3, 2]
+            assert.deepEqual(actual, expected);
         });
 
         QUnit.test("endre en stolpe", function (assert) {
+            numbers = [3, 1, 2];
             chosenBar = 1;
+            inputValue = 9;
+            
             changeSelectedBar()
-            const actual = numbers[chosenBar]
-            const expected = 3;
-            assert.equal(actual, expected);
+            let actual = numbers
+            let expected = [9, 1, 2]
+            assert.deepEqual(actual, expected);
         });
 
         QUnit.test("legge til en stolpe", function (assert) {
+            numbers = [3, 2];
+            inputValue = 2;
             createNewBar()
-            const actual = numbers.length
-            const expected = 6;
-            assert.equal(actual, expected);
+            let actual = numbers
+            let expected = [3, 2, 2]
+            assert.deepEqual(actual, expected);
         });
     </script>
 </body>
